<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Run My Way</string>
    <string name="action_settings">Settings</string>
    <string name="ScheduleIcon">Schedule</string>
    <string name="HistoryIcon">History</string>
    <string name="PersonalDataIcon">Personal Data</string>
    <string name="title_activity_personal_data">Personal Particulars</string>
    <string name="Name_Textview">Username</string>
    <string name="Gender_Textview">Gender</string>
    <string name="Height_Textview">Height (cm)</string>
    <string name="Weight_Textview">Weight (kg)</string>
    <string name="Birthday_Textview">Birthday (ddmmyyyy)</string>
    <string name="Male_RadioButton">Male</string>
    <string name="Female_RadioButton">Female</string>
    <string name="Save_Button">Save</string>
    <string name="Cancel_Button">Cancel</string>
    <string name="title_activity_google_login">Connect with Google Account</string>
    <string name="GoogleLogin">Login with Google</string>
    <string name="Connect_Button">Connect</string>
    <string name="AuthCode">Authentication Code</string>
    <string name="init_time_second">00:00</string>
    <string name="init_time_100millisecond">0:00:00.0</string>
    <string name="menu_setting_timer_unit">Setting timer unit</string>
    <string name="menu_about">About</string>
    <string name="menu_exit">Exit</string>
    <string name="menu_setting_second">1 Second</string>
    <string name="menu_setting_100milisec">0.1 Second</string>
    <string name="title_activity_schedule">Schedule</string>
    <string name="schedule_title">Schedule</string>
    <string name="purpose_exercise">Exercise</string>
    <string name="purpose_lose_weight">Lose Weight</string>
    <string name="purpose_fun">For fun</string>
    <string name="title_activity_history">History</string>
    <string name="update_home_location">Update Home Location</string>
    <string name="login_offline">Login Offline</string>
    <string name="title_activity_main_page">MainPage</string>
    <string name="Space">  </string>
    <string name="start">Start</string>
    <string name="fourspaces">    </string>
    <string name="stop">Stop</string>
    <string name="startTime">Start Time: </string>
    <string name="stopTime">Stop Time: </string>
    <string name="RebuildConflict">Reschedule Conflict</string>
    <string name="RebuildMissed">Reschedule Missed</string>

</resources>
